--- a/beers.html
+++ b/beers.html
@@ -4,7 +4,7 @@
     <!-- En el <head>, reemplazar o añadir estos meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Meta Description específica para catálogo -->
     <meta name="description" content="Catálogo completo de cervezas artesanales El Oso. Filtra por estilo: IPA, Stout, Amber, Wheat, Blonde, Lager, Dubbel. Precios, descripciones y disponibilidad en tiempo real.">
 
@@ -59,6 +59,8 @@
             "latitude": "-34.7200",
             "longitude": "-58.2580"
         },
+        "image": "https://eloso.ar/images/logo-blanco.png",
+        "priceRange": "$$",
         "servesCuisine": "Cerveza Artesanal",
         "openingHours": "Mo-Su 09:00-21:00",
         "telephone": "+5491123495971",
