--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             "latitude": "-34.7200",
             "longitude": "-58.2580"
         },
+        "image": "https://eloso.ar/images/logo-blanco.png",
+        "priceRange": "$$",
         "servesCuisine": "Cerveza Artesanal",
         "openingHours": "Mo-Su 09:00-21:00",
         "telephone": "+5491123495971",
