--- a/beers.html
+++ b/beers.html
@@ -50,8 +50,10 @@
         "url": "https://eloso.ar/",
         "address": {
             "@type": "PostalAddress",
+            "streetAddress": "Rodolfo López 1561",
             "addressLocality": "Quilmes",
             "addressRegion": "Buenos Aires",
+            "postalCode": "1878",
             "addressCountry": "AR"
         },
         "geo": {
@@ -64,7 +66,6 @@
         "servesCuisine": "Cerveza Artesanal",
         "openingHours": "Mo-Su 09:00-21:00",
         "telephone": "+5491123495971",
-        "priceRange": "$$",
         "sameAs": [
             "https://instagram.com/elosocerveza"
         ]
@@ -114,11 +115,15 @@
         <span itemprop="name">El Oso Cerveza Artesanal</span>
         <span itemprop="description">Cerveza artesanal en Quilmes, Buenos Aires</span>
         <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+            <span itemprop="streetAddress">Rodolfo López 1561</span>,
             <span itemprop="addressLocality">Quilmes</span>,
             <span itemprop="addressRegion">Buenos Aires</span>,
-            <span itemprop="addressCountry">Argentina</span>
+            <span itemprop="postalCode">1878</span>,
+            <span itemprop="addressCountry">AR</span>
         </div>
         <span itemprop="telephone">+5491123495971</span>
+        <span itemprop="priceRange">$$</span>
+        <img itemprop="image" src="https://eloso.ar/images/logo-blanco.png" alt="El Oso Cerveza Artesanal" style="display:none;"/>
         <span itemprop="areaServed">Quilmes</span>
     </div>
 
