--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/beers.html">
+                            <meta itemprop="url" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
+                            <link itemprop="shippingDetails" href="#shippingDetails" />
+                            <link itemprop="hasMerchantReturnPolicy" href="#returnPolicy" />
                         </div>
                     </div>
                 </div>
@@ -376,7 +378,9 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/beers.html">
+                            <meta itemprop="url" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
+                            <link itemprop="shippingDetails" href="#shippingDetails" />
+                            <link itemprop="hasMerchantReturnPolicy" href="#returnPolicy" />
                         </div>
                     </div>
                 </div>
@@ -414,7 +418,9 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/beers.html">
+                            <meta itemprop="url" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
+                            <link itemprop="shippingDetails" href="#shippingDetails" />
+                            <link itemprop="hasMerchantReturnPolicy" href="#returnPolicy" />
                         </div>
                     </div>
                 </div>
