--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
-                            <link itemprop="shippingDetails" href="#shippingDetails" />
-                            <link itemprop="hasMerchantReturnPolicy" href="#returnPolicy" />
+                            <meta itemprop="url" content="https://eloso.ar/">
+                            <meta itemprop="image" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
                         </div>
                     </div>
                 </div>
@@ -378,9 +377,8 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
-                            <link itemprop="shippingDetails" href="#shippingDetails" />
-                            <link itemprop="hasMerchantReturnPolicy" href="#returnPolicy" />
+                            <meta itemprop="url" content="https://eloso.ar/">
+                            <meta itemprop="image" content="https://eloso.ar/images/products/beers/vika.jpg?v=8">
                         </div>
                     </div>
                 </div>
@@ -418,9 +416,8 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
-                            <link itemprop="shippingDetails" href="#shippingDetails" />
-                            <link itemprop="hasMerchantReturnPolicy" href="#returnPolicy" />
+                            <meta itemprop="url" content="https://eloso.ar/">
+                            <meta itemprop="image" content="https://eloso.ar/images/products/beers/arun.jpg?v=8">
                         </div>
                     </div>
                 </div>
