--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
             <div class="products-grid">
                 <!-- 1. MÁS VENDIDA - EMBER -->
                 <div class="product-card" itemscope itemtype="https://schema.org/Product">
+                    <meta itemprop="url" content="https://eloso.ar/">
+                    <meta itemprop="image" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
                     <div class="product-image">
                         <div class="product-badge">MÁS VENDIDA</div>
                         <!-- Imagen con lazy loading -->
@@ -337,14 +339,16 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/">
-                            <meta itemprop="image" content="https://eloso.ar/images/products/beers/ember.jpg?v=8">
+                            <link itemprop="shippingDetails" href="https://eloso.ar/#shipping" />
+                            <link itemprop="hasMerchantReturnPolicy" href="https://eloso.ar/#returns" />
                         </div>
                     </div>
                 </div>
                 
                 <!-- 2. PREMIUM - VIKA -->
                 <div class="product-card" itemscope itemtype="https://schema.org/Product">
+                    <meta itemprop="url" content="https://eloso.ar/">
+                    <meta itemprop="image" content="https://eloso.ar/images/products/beers/vika.jpg?v=8">
                     <div class="product-image">
                         <div class="product-badge">PREMIUM</div>
                         <!-- Imagen con lazy loading -->
@@ -377,14 +381,16 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/">
-                            <meta itemprop="image" content="https://eloso.ar/images/products/beers/vika.jpg?v=8">
+                            <link itemprop="shippingDetails" href="https://eloso.ar/#shipping" />
+                            <link itemprop="hasMerchantReturnPolicy" href="https://eloso.ar/#returns" />
                         </div>
                     </div>
                 </div>
                 
                 <!-- 3. FÁCIL DE TOMAR - ARUN -->
                 <div class="product-card" itemscope itemtype="https://schema.org/Product">
+                    <meta itemprop="url" content="https://eloso.ar/">
+                    <meta itemprop="image" content="https://eloso.ar/images/products/beers/arun.jpg?v=8">
                     <div class="product-image">
                         <div class="product-badge">FÁCIL DE TOMAR</div>
                         <img class="lazy-load" 
@@ -416,8 +422,8 @@
                             <meta itemprop="price" content="5000">
                             <meta itemprop="priceCurrency" content="ARS">
                             <meta itemprop="availability" content="https://schema.org/InStock">
-                            <meta itemprop="url" content="https://eloso.ar/">
-                            <meta itemprop="image" content="https://eloso.ar/images/products/beers/arun.jpg?v=8">
+                            <link itemprop="shippingDetails" href="https://eloso.ar/#shipping" />
+                            <link itemprop="hasMerchantReturnPolicy" href="https://eloso.ar/#returns" />
                         </div>
                     </div>
                 </div>
