--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
     <!-- En el <head>, reemplazar o añadir estos meta tags -->
     <meta charset="UTF-8">
@@ -113,7 +113,7 @@
     </script>
 
     <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="Ubg5GYAjonEotlJ56TWF4Cxr4nvivZGULlNx1fhho_4">
+    <meta name="google-site-verification" content="xL0bF1MF2lTpuOwKsNkd2PNiPxs-o35IuaLXh0v3slE">
 </head>
 <body>
     <!-- Anunciador para lectores de pantalla -->
@@ -142,11 +142,11 @@
             <nav class="nav">
                 <a href="#" class="logo">
                     <!-- Logo optimizado con loading lazy -->
-                    <img src="images/logo.png" alt="El Oso Cerveza Artesanal" 
+                    <img src="images/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
                          class="logo-img" 
                          loading="lazy"
-                         width="28" 
-                         height="28">
+                         width="32" 
+                         height="32">
                     <span class="logo-text">EL OSO</span>
                 </a>
                 
@@ -173,11 +173,11 @@
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-header">
             <div class="logo">
-                <img src="images/logo.png" alt="El Oso Cerveza Artesanal" 
+                <img src="images/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
                      class="logo-img"
                      loading="lazy"
-                     width="28" 
-                     height="28">
+                     width="32" 
+                     height="32">
                 <span class="logo-text">EL OSO</span>
             </div>
             <button class="menu-close" id="menu-close" aria-label="Cerrar menú">
@@ -535,11 +535,11 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
-                        <img src="images/logo.png" alt="El Oso Cerveza Artesanal" 
+                        <img src="images/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
                              class="logo-img"
                              loading="lazy"
-                             width="28" 
-                             height="28">
+                             width="32" 
+                             height="32">
                         <span class="logo-text">EL OSO</span>
                     </div>
                     <p>Cerveza Artesanal.<br>Buenos Aires, Argentina.</p>
