--- a/beers.html
+++ b/beers.html
@@ -38,7 +38,7 @@
     <title>Catálogo de Cervezas | El Oso</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css?v=1">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -324,6 +324,6 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
-    <script src="scripts.js"></script>
+    <script src="scripts.min.js?v=1"></script>
 </body>
 </html>
