--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=4">
+    <link rel="stylesheet" href="styles.css?v=4">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -790,6 +790,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=4"></script>
+    <script src="scripts.js?v=4"></script>
 </body>
 </html>
