--- a/beers.html
+++ b/beers.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
-    <!-- En el <head>, reemplazar o añadir estos meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+    <link rel="manifest" href="images/site.webmanifest" />
 
     <!-- Meta Description específica para catálogo -->
     <meta name="description" content="Catálogo completo de cervezas artesanales El Oso. Filtra por estilo: IPA, Stout, Amber, Wheat, Blonde, Lager, Dubbel. Precios, descripciones y disponibilidad en tiempo real.">
@@ -41,7 +45,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=5">
+    <link rel="stylesheet" href="styles.css?v=5">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -422,7 +426,7 @@
                 <div class="footer-section">
                     <h4>Explorar</h4>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="beers.html">Cervezas</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
@@ -442,7 +446,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://instagram.com/elosocerveza" target="_blank" class="social-link">
+                            <a href="https://instagram.com/elosocerveza" target="_blank" class="social-link" rel="noopener noreferrer">
                                 <i class="fab fa-instagram"></i> @elosocerveza
                             </a>
                         </li>
@@ -468,6 +472,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=5"></script>
+    <script src="scripts.js?v=5"></script>
 </body>
 </html>
