--- a/beers.html
+++ b/beers.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
-    <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
-    <link rel="manifest" href="images/site.webmanifest" />
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <!-- Meta Description específica para catálogo -->
     <meta name="description" content="Catálogo completo de cervezas artesanales El Oso. Filtra por estilo: IPA, Stout, Amber, Wheat, Blonde, Lager, Dubbel. Precios, descripciones y disponibilidad en tiempo real.">
@@ -21,7 +21,7 @@
     <!-- Open Graph para catálogo -->
     <meta property="og:title" content="Catálogo Completo de Cervezas Artesanales | El Oso">
     <meta property="og:description" content="Explora nuestra colección de cervezas artesanales premium. +10 estilos disponibles con descripciones detalladas y precios actualizados.">
-    <meta property="og:image" content="https://eloso.ar/images/logo-blanco.png">
+    <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png">
     <meta property="og:url" content="https://eloso.ar/beers.html">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_AR">
@@ -31,7 +31,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Catálogo de Cervezas Artesanales El Oso">
     <meta name="twitter:description" content="Descubre todas nuestras cervezas artesanales con filtros por estilo y disponibilidad inmediata.">
-    <meta name="twitter:image" content="https://eloso.ar/images/logo-blanco.png">
+    <meta name="twitter:image" content="https://eloso.ar/images/logo/logo-blanco.png">
     
     <!-- Preconnect para optimizar carga -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
             "latitude": "-34.7200",
             "longitude": "-58.2580"
         },
-        "image": "https://eloso.ar/images/logo-blanco.png",
+        "image": "https://eloso.ar/images/logo/logo-blanco.png",
         "priceRange": "$$",
         "servesCuisine": "Cerveza Artesanal",
         "openingHours": "Mo-Su 09:00-21:00",
@@ -270,7 +270,7 @@
         </div>
         <span itemprop="telephone">+5491123495971</span>
         <span itemprop="priceRange">$$</span>
-        <img itemprop="image" src="https://eloso.ar/images/logo-blanco.png" alt="El Oso Cerveza Artesanal" style="display:none;"/>
+        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png" alt="El Oso Cerveza Artesanal" style="display:none;"/>
         <span itemprop="areaServed">Quilmes</span>
     </div>
 
@@ -280,7 +280,7 @@
             <nav class="nav">
                 <a href="index.html" class="logo">
                     <!-- Logo optimizado con loading lazy -->
-                    <img src="images/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
+                    <img src="images/logo/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
                          class="logo-img" 
                          loading="lazy"
                          width="32" 
@@ -311,7 +311,7 @@
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-header">
             <div class="logo">
-                <img src="images/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
+                <img src="images/logo/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
                      class="logo-img"
                      loading="lazy"
                      width="32" 
@@ -413,7 +413,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
-                        <img src="images/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
+                        <img src="images/logo/logo.png?v=8" alt="El Oso Cerveza Artesanal" 
                              class="logo-img"
                              loading="lazy"
                              width="32" 
