--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.css?v=5">
+    <link rel="stylesheet" href="styles.min.css?v=6">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -797,6 +797,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.js?v=5"></script>
+    <script src="scripts.min.js?v=6"></script>
 </body>
 </html>
