--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Open Graph mejorado -->
     <meta property="og:title" content="El Oso | Cerveza Artesanal Premium • Buenos Aires">
     <meta property="og:description" content="Cerveza artesanal elaborada en lotes limitados. Recetas propias, venta directa y calidad premium. ¡Descubre el sabor auténtico!">
-    <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png">
+    <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
     <meta property="og:url" content="https://eloso.ar/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_AR">
@@ -31,7 +31,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="El Oso | Cerveza Artesanal Premium">
     <meta name="twitter:description" content="Cerveza artesanal de lotes limitados. Calidad, sabor y tradición en cada botella.">
-    <meta name="twitter:image" content="https://eloso.ar/images/logo/logo-blanco.png">
+    <meta name="twitter:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
 
     <!-- Geo Tags -->
     <meta name="geo.region" content="AR-B">
@@ -80,7 +80,7 @@
             "latitude": "-34.7200",
             "longitude": "-58.2580"
         },
-        "image": "https://eloso.ar/images/logo/logo-blanco.png",
+        "image": "https://eloso.ar/images/logo/logo-blanco.png?v=8",
         "priceRange": "$$",
         "servesCuisine": "Cerveza Artesanal",
         "openingHours": "Mo-Su 09:00-21:00",
@@ -292,7 +292,7 @@
         </div>
         <span itemprop="telephone">+5491123495971</span>
         <span itemprop="priceRange">$$</span>
-        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png" alt="El Oso Cerveza Artesanal" style="display:none;"/>
+        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png?v=8" alt="El Oso Cerveza Artesanal" style="display:none;"/>
         <span itemprop="areaServed">Quilmes</span>
     </div>
 
