--- a/beers.html
+++ b/beers.html
@@ -21,7 +21,7 @@
     <!-- Open Graph para catálogo -->
     <meta property="og:title" content="Catálogo Completo de Cervezas Artesanales | El Oso">
     <meta property="og:description" content="Explora nuestra colección de cervezas artesanales premium. +10 estilos disponibles con descripciones detalladas y precios actualizados.">
-    <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png">
+    <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
     <meta property="og:url" content="https://eloso.ar/beers.html">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_AR">
@@ -31,7 +31,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Catálogo de Cervezas Artesanales El Oso">
     <meta name="twitter:description" content="Descubre todas nuestras cervezas artesanales con filtros por estilo y disponibilidad inmediata.">
-    <meta name="twitter:image" content="https://eloso.ar/images/logo/logo-blanco.png">
+    <meta name="twitter:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
     
     <!-- Preconnect para optimizar carga -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
             "latitude": "-34.7200",
             "longitude": "-58.2580"
         },
-        "image": "https://eloso.ar/images/logo/logo-blanco.png",
+        "image": "https://eloso.ar/images/logo/logo-blanco.png?v=8",
         "priceRange": "$$",
         "servesCuisine": "Cerveza Artesanal",
         "openingHours": "Mo-Su 09:00-21:00",
@@ -225,7 +225,7 @@
         </div>
         <span itemprop="telephone">+5491123495971</span>
         <span itemprop="priceRange">$$</span>
-        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png" alt="El Oso Cerveza Artesanal" style="display:none;"/>
+        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png?v=8" alt="El Oso Cerveza Artesanal" style="display:none;"/>
         <span itemprop="areaServed">Quilmes</span>
     </div>
 
