--- a/sauces.html
+++ b/sauces.html
@@ -68,7 +68,7 @@
             "latitude": "-34.7200",
             "longitude": "-58.2580"
         },
-        "image": "https://eloso.ar/images/logo/logo-blanco.png",
+        "image": "https://eloso.ar/images/logo/logo-blanco.png?v=8",
         "priceRange": "$$",
         "servesCuisine": "Cerveza Artesanal y Productos Artesanales",
         "openingHours": "Mo-Su 09:00-21:00",
@@ -225,7 +225,7 @@
         </div>
         <span itemprop="telephone">+5491123495971</span>
         <span itemprop="priceRange">$$</span>
-        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png" alt="El Oso Cerveza Artesanal" style="display:none;"/>
+        <img itemprop="image" src="https://eloso.ar/images/logo/logo-blanco.png?v=8" alt="El Oso Cerveza Artesanal" style="display:none;"/>
         <span itemprop="areaServed">Quilmes</span>
     </div>
 
