--- a/index.html
+++ b/index.html
@@ -423,7 +423,14 @@
                     <!-- Cervezas -->
                     <a href="beers.html" class="category-card">
                         <div class="category-image">
-                            <img src="images/categories/beers.jpg" alt="Cervezas Artesanales" loading="lazy">
+                            <img class="lazy-load" 
+                                data-src="images/categories/beers.jpg?v=8" 
+                                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23111111'/%3E%3C/svg%3E"
+                                alt="Cervezas Artesanales"
+                                loading="lazy"
+                                width="200"
+                                height="200"
+                                itemprop="image">
                         </div>
                         <div class="category-info">
                             <h3>Cervezas</h3>
@@ -434,7 +441,14 @@
                     <!-- Salsas -->
                     <a href="sauces.html" class="category-card">
                         <div class="category-image">
-                            <img src="images/categories/sauces.jpg" alt="Salsas Artesanales" loading="lazy">
+                            <img class="lazy-load" 
+                                data-src="images/categories/sauces.jpg?v=8" 
+                                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23111111'/%3E%3C/svg%3E"
+                                alt="Salsas Artesanales"
+                                loading="lazy"
+                                width="200"
+                                height="200"
+                                itemprop="image">
                         </div>
                         <div class="category-info">
                             <h3>Picantes</h3>
@@ -445,7 +459,14 @@
                     <!-- Conservas -->
                     <a href="preserves.html" class="category-card">
                         <div class="category-image">
-                            <img src="images/categories/preserves.jpg" alt="Conservas Artesanales" loading="lazy">
+                            <img class="lazy-load" 
+                                data-src="images/categories/preserves.jpg?v=8" 
+                                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23111111'/%3E%3C/svg%3E"
+                                alt="Conservas Artesanales"
+                                loading="lazy"
+                                width="200"
+                                height="200"
+                                itemprop="image">
                         </div>
                         <div class="category-info">
                             <h3>Conservas</h3>
@@ -456,7 +477,14 @@
                     <!-- Combos -->
                     <a href="combos.html" class="category-card">
                         <div class="category-image">
-                            <img src="images/categories/combos.jpg" alt="Combos Especiales" loading="lazy">
+                            <img class="lazy-load" 
+                                data-src="images/categories/combos.jpg?v=8" 
+                                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23111111'/%3E%3C/svg%3E"
+                                alt="Combos Especiales"
+                                loading="lazy"
+                                width="200"
+                                height="200"
+                                itemprop="image">
                         </div>
                         <div class="category-info">
                             <h3>Combos</h3>
